# git-get

./: .pre-commit-config.yaml  gitget.py  pyproject.toml  requirements.txt
